--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker 
 
 before_install:
-    - docker build -t imgTag -f Dockerfile.dev . 
+    - docker build -t imgtag -f Dockerfile.dev . 
 
 script:
-    - docker run imgTag npm run test -- --coverage 
+    - docker run imgtag npm run test -- --coverage 
